<resources>
    <string name="app_name">messenger2</string>
    <string name="messenger">Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="your_password">Your password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="logout">Logout</string>
    <string name="success_reset_message">The reset link has been successfully sent</string>
    <string name="type_your_message">Type your message</string>
</resources>